Collada import Animation : Bone animations are not imported correctly #69772

Closed
opened 2019-09-12 04:45:15 +02:00 by Trevor H · 9 comments

System Information
Operating system: Windows 10
Graphics card: Intel

Blender Version
2.80

Short description of error

Exact steps for others to reproduce the error
When I import a Collada.dae file from Poser 10 with animation, the legs look fine, but I get zombie arms! They are in a fixed outward position. The imported Collada.dae file used to work in a previous version of Blender, cannot remember which one. I reported a Collada.dae bug a while back, when the arms were flapping on import, now they are in a fixed position.

Also Blender 2.80 crashes when exporting a Collada.dae file with animation.

Walk.dae

**System Information** Operating system: Windows 10 Graphics card: Intel **Blender Version** 2.80 **Short description of error** **Exact steps for others to reproduce the error** When I import a Collada.dae file from Poser 10 with animation, the legs look fine, but I get zombie arms! They are in a fixed outward position. The imported Collada.dae file used to work in a previous version of Blender, cannot remember which one. I reported a Collada.dae bug a while back, when the arms were flapping on import, now they are in a fixed position. Also Blender 2.80 crashes when exporting a Collada.dae file with animation. [Walk.dae](https://archive.blender.org/developer/F7737751/Walk.dae)
Author

Added subscriber: @TH-10

Added subscriber: @TH-10
Member

Added subscribers: @GaiaClary, @lichtwerk

Added subscribers: @GaiaClary, @lichtwerk
Member
CC @GaiaClary
Member

@TH-10 Could you please try to make a simpler animation that shows the same issue ? this list might help:

  • animate only one side of the model.
  • do not export the scale animation (it is not used anyways)
  • skip all bone animations below the forarm bones
  • skip the leg animation.
  • make a smaller animation of just a few frames

The smaller you can make the demo dae the better. It is not easy to debug this sort of problems and less complex files help a lot :)

As an additional note: I think the bone where things really go wrong is "Right Shoulder" and "Right Collar" (and the corresponding bones on the left side as well of course). It looks like there is a 90 degree extra rotation that we miss during import.

@TH-10 Could you please try to make a simpler animation that shows the same issue ? this list might help: - animate only one side of the model. - do not export the scale animation (it is not used anyways) - skip all bone animations below the forarm bones - skip the leg animation. - make a smaller animation of just a few frames The smaller you can make the demo dae the better. It is not easy to debug this sort of problems and less complex files help a lot :) As an additional note: I think the bone where things really go wrong is "Right Shoulder" and "Right Collar" (and the corresponding bones on the left side as well of course). It looks like there is a 90 degree extra rotation that we miss during import.
Author

@GaiaClary . I will try and make a simpler animation hopefully showing your suggestions a.s.a.p. I am using Poser 10 and the built-in 'Walk Designer' to create walk cycles. I could use another model prop like the 'mannequin' which I think has less bones. I use the Poser 10 Collada presets for exports. I think there is an option to turn off the scale animation.

I did download the game engine GODOT, after hearing about it here on Blender. I successfully imported the Walk.dae into GODOT without any modifications and it plays back as expected.

@GaiaClary . I will try and make a simpler animation hopefully showing your suggestions a.s.a.p. I am using Poser 10 and the built-in 'Walk Designer' to create walk cycles. I could use another model prop like the 'mannequin' which I think has less bones. I use the Poser 10 Collada presets for exports. I think there is an option to turn off the scale animation. I did download the game engine GODOT, after hearing about it here on Blender. I successfully imported the Walk.dae into GODOT without any modifications and it plays back as expected.
Author

Mannequin.dae

Mannequin_OneSide_5_frames.dae

{F8170609}@GaiaClary . Here is an updated walk cycle using the Mannequin model. Hope these will do! Not much options in turning off the scale animations. It's either 100% or use one of the scale units. If I use fewer animation frames the cycle will not loop full cycle, I have included one with about 5 frames.

[Mannequin.dae](https://archive.blender.org/developer/F8170607/Mannequin.dae) [Mannequin_OneSide_5_frames.dae](https://archive.blender.org/developer/F8170608/Mannequin_OneSide_5_frames.dae) {[F8170609](https://archive.blender.org/developer/F8170609/Mannequin_OneSide_Animation.dae)}@GaiaClary . Here is an updated walk cycle using the Mannequin model. Hope these will do! Not much options in turning off the scale animations. It's either 100% or use one of the scale units. If I use fewer animation frames the cycle will not loop full cycle, I have included one with about 5 frames.

This issue was referenced by 0281411b48

This issue was referenced by 0281411b482e718922fe446f03caca8c7fadb9a9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Gaia Clary self-assigned this 2019-11-27 11:19:14 +01:00
Gaia Clary changed title from Collada import / Export Animation : Arms are in a fixed position : Crashing on Export to Collada import Animation : Bone animations are not imported correctly 2019-11-27 11:31:27 +01:00
Member

@TH-10 Thanks for the additional collada files!

I believe i found the cause of the wrong rotations. However there is a flaw in the importer: When you enable the "auto connect" feature or the "find bone chains" feature then the bone roll is modified. This affects animations of course. So when you import a collada file that contains animations then those features may not be used for now.

Regarding the Blender crashes on exporting Animations: Please can you create a new report for this and provide a demo blend file that shows the issue?

Closing as resolved.

@TH-10 Thanks for the additional collada files! I believe i found the cause of the wrong rotations. However there is a flaw in the importer: When you enable the "auto connect" feature or the "find bone chains" feature then the bone roll is modified. This affects animations of course. So when you import a collada file that contains animations then those features may not be used for now. Regarding the Blender crashes on exporting Animations: Please can you create a new report for this and provide a demo blend file that shows the issue? Closing as resolved.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69772
No description provided.