fix T69772 Collada importer creates wrong fcurves for skeletal animation